# cpp_exercise

./: .clang-format  CMakeLists.txt  CarStatistics.cpp  CarStatistics.hpp  task.md  tests.cpp
CarStatistics/: CMakeLists.txt  CarStatistics.hpp
CarStatistics/data/: prague.csv
Graph/: CMakeLists.txt  Graph.cpp  Graph.hpp  INode.hpp  Node.cpp  tests.cpp
data/: brno.csv
python_db/: impl.py  task.md
stdlib/: CMakeLists.txt  impl.hpp  main.cpp  task.md
test_data/more_small/: olomouc.csv
